--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Chytrý dům</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">Ukol hotov</div>
     <script src="/bundle.js"></script>
   </body>
 </html>
